deps/v8/test/message/fail/class-fields-private-throw-early.out
*%(basename)s:7: SyntaxError: Private field '#x' must be declared in an enclosing class
    this.#x = 1;
        ^
SyntaxError: Private field '#x' must be declared in an enclosing class